--- a/app/src/main/res/layout/activity_setting_my_profile.xml
+++ b/app/src/main/res/layout/activity_setting_my_profile.xml
@@ -34,7 +34,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
                     android:id="@+id/Setting_Fragment_My_Profile_Img_Civ"
                     android:layout_alignParentLeft="true"
                     android:src="@drawable/ic_launcher_background"
-                    app:civ_border_color="@color/Transparent_Black70"
+                    app:civ_border_color="@color/Transparent_Green"
                     app:civ_border_width="2dp"
                     android:layout_width="65dp"
                     android:layout_height="65dp">
@@ -49,7 +49,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
                     <TextView
                         android:layout_weight="1"
                         android:id="@+id/Setting_Fragment_My_Name_Tv"
-                        android:text="Big_Jeon"
+                        android:text="User_Name"
                         android:padding="2dp"
                         android:textSize="20dp"
                         android:textStyle="bold"
@@ -71,6 +71,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
                         android:id="@+id/Setting_Fragment_Setting_Btns_Container"
                         android:layout_below="@id/My_Profile_activity_User_UID_TV"
                         android:orientation="horizontal"
+                        android:layout_marginTop="3dp"
                         android:layout_width="match_parent"
                         android:gravity="center_vertical"
                         android:layout_height="wrap_content">
@@ -78,7 +79,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
                             android:id="@+id/Setting_Fragment_Unregister_Btn"
                             android:layout_weight="1"
                             android:text="계정 탈퇴"
-                            android:background="@android:color/transparent"
+                            android:background="@drawable/round_shape"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
                         </Button>
@@ -86,7 +87,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
                             android:id="@+id/Setting_Fragment_Change_Profile_Btn"
                             android:layout_weight="1"
                             android:text="프로필 수정"
-                            android:background="@android:color/transparent"
+                            android:background="@drawable/round_shape"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
                         </Button>
@@ -94,7 +95,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
                             android:id="@+id/Setting_Fragment_Sign_Out_Btn"
                             android:layout_weight="1"
                             android:text="로그아웃"
-                            android:background="@android:color/transparent"
+                            android:background="@drawable/round_shape"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
                         </Button>
