--- a/app/src/main/res/layout/activity_user_profile_view.xml
+++ b/app/src/main/res/layout/activity_user_profile_view.xml
@@ -33,7 +33,7 @@
                     android:id="@+id/Setting_Fragment_My_Profile_Img_Civ"
                     android:layout_alignParentLeft="true"
                     android:src="@drawable/ic_launcher_background"
-                    app:civ_border_color="@color/Transparent_Black70"
+                    app:civ_border_color="@color/purple_200"
                     app:civ_border_width="2dp"
                     android:layout_width="65dp"
                     android:layout_height="65dp">
@@ -59,12 +59,12 @@
                         <TextView
                             android:id="@+id/Setting_Fragment_Send_Friend_Request_Btn"
                             android:layout_marginRight="5dp"
-                            android:padding="5dp"
+                            android:padding="4dp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textSize="10dp"
                             android:textColor="@color/black"
-                            android:background="@color/Transparent_Black30"
+                            android:background="@drawable/round_shape_off"
                             android:layout_marginTop="5dp"
                             android:text="친구 추가 +">
                         </TextView>
@@ -76,7 +76,6 @@
                     android:layout_height="30dp"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentTop="true"
-                    android:rotationY="180"
                     android:background="@drawable/ic_baseline_maps_ugc_24"
                     android:textColor="@color/black">
                 </de.hdodenhof.circleimageview.CircleImageView>
