--- a/app/src/main/res/layout/fragment_post_view.xml
+++ b/app/src/main/res/layout/fragment_post_view.xml
@@ -17,36 +17,94 @@
         android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <RelativeLayout
+        <LinearLayout
             android:id="@+id/Post_View_Category_Container"
-            android:paddingBottom="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="3dp"
+            android:layout_marginRight="3dp"
+            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+           <TextView
+               android:id="@+id/Category_TV_All"
+               android:gravity="center"
+               android:text="#.모든 게시글"
+               android:textSize="12dp"
+               android:padding="3dp"
+               android:background="@drawable/round_shape"
+               android:layout_weight="1.3"
+               android:textStyle="bold"
+               android:textColor="@color/Transparent_Green"
+               android:layout_width="0dp"
+               android:layout_height="wrap_content">
+           </TextView>
             <TextView
-                android:paddingTop="5dp"
-                android:id="@+id/Category_Result_TV"
-                android:textSize="20dp"
-                android:textColor="@color/black"
-                android:text="카테고리"
+                android:id="@+id/Category_TV_Talk"
+                android:text="#.잡담"
+                android:gravity="center"
+                android:textSize="12dp"
+                android:background="@drawable/round_shape_off"
+                android:padding="3dp"
                 android:textStyle="bold"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentLeft="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp">
+                android:layout_weight="1"
+                android:textColor="@color/Transparent_Black50"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content">
             </TextView>
-           <androidx.recyclerview.widget.RecyclerView
-               android:id="@+id/Category_RCV"
-               android:paddingLeft="10dp"
-               android:paddingRight="10dp"
-               android:layout_centerInParent="true"
-               android:layout_below="@id/Category_Result_TV"
-               tools:listitem="@layout/category_item"
-               android:layout_width="match_parent"
-               android:layout_height="40dp">
-           </androidx.recyclerview.widget.RecyclerView>
-        </RelativeLayout>
+            <TextView
+                android:id="@+id/Category_TV_Meet"
+                android:text="#.모임"
+                android:gravity="center"
+                android:padding="3dp"
+                android:background="@drawable/round_shape_off"
+                android:textSize="12dp"
+                android:textStyle="bold"
+                android:layout_weight="1"
+                android:textColor="@color/Transparent_Black50"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content">
+            </TextView>
+            <TextView
+                android:id="@+id/Category_TV_Game"
+                android:text="#.게임"
+                android:gravity="center"
+                android:textSize="12dp"
+                android:background="@drawable/round_shape_off"
+                android:textStyle="bold"
+                android:padding="3dp"
+                android:layout_weight="1"
+                android:textColor="@color/Transparent_Black50"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content">
+            </TextView>
+            <TextView
+                android:id="@+id/Category_TV_Pride"
+                android:text="#.자랑"
+                android:gravity="center"
+                android:textSize="12dp"
+                android:textStyle="bold"
+                android:background="@drawable/round_shape_off"
+                android:padding="3dp"
+                android:layout_weight="1"
+                android:textColor="@color/Transparent_Black50"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content">
+            </TextView>
+            <TextView
+                android:id="@+id/Category_TV_Grung"
+                android:text="#.고민"
+                android:gravity="center"
+                android:textSize="12dp"
+                android:background="@drawable/round_shape_off"
+                android:padding="3dp"
+                android:textStyle="bold"
+                android:layout_weight="1"
+                android:textColor="@color/Transparent_Black50"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content">
+            </TextView>
+        </LinearLayout>
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/Post_Swipe_Refresh_Layout"
         android:layout_below="@id/Post_View_Category_Container"
