--- a/app/src/main/res/layout/activity_app_main.xml
+++ b/app/src/main/res/layout/activity_app_main.xml
@@ -36,25 +36,27 @@
 
         <ImageView
             android:background="@android:color/transparent"
-            android:src="@drawable/grung_title"
+            android:src="@drawable/app_main_title"
             android:layout_centerInParent="true"
-            android:layout_width="100dp"
-            android:layout_height="40dp">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
         </ImageView>
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/App_Main_Notice_Civ"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:padding="5dp"
+            android:layout_marginRight="3dp"
             android:layout_toLeftOf="@id/App_Main_Write_Post_CIV"
             android:layout_centerInParent="true"
             android:src="@drawable/ic_baseline_notifications_24">
         </de.hdodenhof.circleimageview.CircleImageView>
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/App_Main_Write_Post_CIV"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:padding="5dp"
+            android:layout_marginRight="5dp"
             android:src="@drawable/ic_baseline_post_add_24"
             android:layout_centerInParent="true"
             android:layout_alignParentRight="true">
