--- a/app/src/main/res/layout/activity_post_write.xml
+++ b/app/src/main/res/layout/activity_post_write.xml
@@ -19,13 +19,22 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_alignParentTop="true">
+            <ImageView
+                android:id="@+id/Post_Write_BackPress_Imv"
+                android:layout_marginLeft="3dp"
+                android:background="@drawable/ic_baseline_navigate_before_24"
+                android:layout_centerInParent="true"
+                android:layout_alignParentLeft="true"
+                android:layout_width="30dp"
+                android:layout_height="30dp">
+            </ImageView>
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/Dialog_Posting_User_Img"
+                android:layout_toRightOf="@id/Post_Write_BackPress_Imv"
                 android:src="@mipmap/ic_launcher"
                 android:layout_width="30dp"
                 android:layout_height="match_parent"
                 android:layout_centerInParent="true"
-                android:layout_alignParentLeft="true"
                 android:layout_marginLeft="5dp">
             </de.hdodenhof.circleimageview.CircleImageView>
             <TextView
