--- a/app/src/main/res/layout/activity_set_user_profile.xml
+++ b/app/src/main/res/layout/activity_set_user_profile.xml
@@ -11,7 +11,7 @@
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="10dp"
+    android:padding="10dp"
     android:background="@color/white"
     tools:context="com.bigjeon.grumbling.Set_User_Profile_Activity">
     <RelativeLayout
@@ -77,8 +77,11 @@
                 <Button
                     android:id="@+id/Set_User_Img_Default_Btn"
                     android:text="기본 프로필"
-                    android:textSize="10dp"
+                    android:textStyle="bold"
+                    android:textSize="15dp"
+                    android:layout_marginRight="5dp"
                     android:textColor="@color/black"
+                    android:background="@drawable/round_shape_off"
                     android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="match_parent">
@@ -86,7 +89,10 @@
                 <Button
                     android:id="@+id/Set_User_Img_from_Gallery_Btn"
                     android:text="갤러리"
-                    android:textSize="10dp"
+                    android:textStyle="bold"
+                    android:textSize="15dp"
+                    android:layout_marginLeft="5dp"
+                    android:background="@drawable/round_shape_off"
                     android:textColor="@color/black"
                     android:layout_weight="1"
                     android:layout_width="0dp"
