--- a/app/src/main/res/layout/activity_setting_my_profile.xml
+++ b/app/src/main/res/layout/activity_setting_my_profile.xml
@@ -19,10 +19,34 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
         android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <RelativeLayout
+            android:layout_weight="1"
+            android:background="@color/white"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/My_Profile_Back_IMV"
+                android:layout_marginLeft="5dp"
+                android:layout_alignParentLeft="true"
+                android:layout_centerInParent="true"
+                android:background="@drawable/ic_baseline_navigate_before_24"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+            </ImageView>
+            <TextView
+                android:layout_centerInParent="true"
+                android:text="- 내 프로필 -"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:textSize="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+            </TextView>
+        </RelativeLayout>
         <LinearLayout
             android:background="@color/white"
             android:orientation="vertical"
-            android:layout_weight="1.5"
+            android:layout_weight="4"
             android:layout_width="match_parent"
             android:layout_height="0dp">
             <RelativeLayout
@@ -78,6 +102,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
                         <Button
                             android:id="@+id/Setting_Fragment_Unregister_Btn"
                             android:layout_weight="1"
+                            android:layout_marginRight="3dp"
                             android:text="계정 탈퇴"
                             android:background="@drawable/round_shape"
                             android:layout_width="match_parent"
@@ -85,6 +110,8 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
                         </Button>
                         <Button
                             android:id="@+id/Setting_Fragment_Change_Profile_Btn"
+                            android:layout_marginLeft="3dp"
+                            android:layout_marginRight="3dp"
                             android:layout_weight="1"
                             android:text="프로필 수정"
                             android:background="@drawable/round_shape"
@@ -94,6 +121,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
                         <Button
                             android:id="@+id/Setting_Fragment_Sign_Out_Btn"
                             android:layout_weight="1"
+                            android:layout_marginLeft="3dp"
                             android:text="로그아웃"
                             android:background="@drawable/round_shape"
                             android:layout_width="match_parent"
@@ -104,7 +132,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
             </RelativeLayout>
         </LinearLayout>
         <RelativeLayout
-            android:layout_weight="10"
+            android:layout_weight="25"
             android:layout_width="match_parent"
             android:layout_height="0dp">
             <androidx.recyclerview.widget.RecyclerView
