--- a/app/src/main/res/layout/chatting_list_item.xml
+++ b/app/src/main/res/layout/chatting_list_item.xml
@@ -11,7 +11,7 @@
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/Chatting_List_User_Img_Civ"
         app:civ_border_width="1dp"
-        app:civ_border_color="@color/black"
+        app:civ_border_color="@color/purple_200"
         android:src="@drawable/app_logo"
         android:layout_width="45dp"
         android:layout_height="45dp">
@@ -43,6 +43,7 @@
         android:layout_centerInParent="true"
         android:textColor="@android:color/holo_red_light"
         android:text=""
+        android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
     </TextView>
