--- a/app/src/main/res/layout/my_chatting_item.xml
+++ b/app/src/main/res/layout/my_chatting_item.xml
@@ -15,10 +15,10 @@
         android:id="@+id/Chatting_Text_TV"
         android:gravity="left"
         android:text="내용입력창입니다."
+        android:backgroundTint="@color/My_Chat_Color"
         android:background="@drawable/my_chat_background"
         android:textColor="@color/black"
         android:layout_alignParentRight="true"
-        android:fontFamily="@font/uhbeerice"
         android:textSize="10dp"
         android:padding="10dp"
         android:layout_marginBottom="5dp"
