--- a/app/src/main/res/drawable/post_view_title_under_edge_1dp.xml
+++ b/app/src/main/res/drawable/post_view_title_under_edge_1dp.xml
@@ -8,7 +8,7 @@
         <shape android:shape="rectangle">
             <stroke
                 android:width="1dp"
-                android:color="@color/black">
+                android:color="@color/Transparent_Black50">
             </stroke>
             <solid android:color="@android:color/transparent"></solid>
         </shape>
