--- a/app/src/main/res/layout/activity_p2p_chatting.xml
+++ b/app/src/main/res/layout/activity_p2p_chatting.xml
@@ -16,7 +16,9 @@
         android:layout_height="match_parent">
         <RelativeLayout
             android:layout_weight="11.5"
-            android:background="@color/Transparent_Black30"
+            android:layout_marginRight="5dp"
+            android:layout_marginLeft="5dp"
+            android:background="@drawable/post_view_title_under_edge_1dp"
             android:id="@+id/Post_View_Content_Container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -103,7 +105,7 @@
             </RelativeLayout>
         </RelativeLayout>
         <RelativeLayout
-            android:background="@color/Transparent_Black30"
+            android:background="@color/Chatting_Container_Color"
             android:layout_weight="11.5"
             android:id="@+id/Chatting_Edittext_Container"
             android:layout_width="match_parent"
