--- a/app/src/main/res/layout/other_chatting_item.xml
+++ b/app/src/main/res/layout/other_chatting_item.xml
@@ -14,7 +14,7 @@
         android:id="@+id/Chatting_User_Img_CIV"
         android:src="@drawable/app_logo"
         app:civ_border_width="1dp"
-        app:civ_border_color="@color/black"
+        app:civ_border_color="@color/purple_200"
         android:layout_marginLeft="5dp"
         android:layout_width="35dp"
         android:layout_height="35dp">
@@ -25,7 +25,6 @@
         android:textSize="10dp"
         android:text="유저 이름"
         android:layout_marginLeft="5dp"
-        android:fontFamily="@font/uhbeerice"
         android:layout_toRightOf="@+id/Chatting_User_Img_CIV"
         android:textColor="@color/black"
         android:layout_width="wrap_content"
@@ -44,7 +43,7 @@
             android:gravity="left"
             android:padding="10dp"
             android:text="내용입력창입니다."
-            android:fontFamily="@font/uhbeerice"
+            android:backgroundTint="@color/purple_100"
             android:textColor="@color/black"
             android:textSize="10dp"
             android:layout_marginBottom="5dp"
