--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -38,18 +38,48 @@
         </ImageView>
     </RelativeLayout>
 
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/Notification_Swipe_RefreshLayout"
-        android:layout_marginTop="5dp"
+    <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/relativeLayout">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/Noti_Request_Friend_List_Rcv"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/Timepeed_TV_Post"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:listitem="@layout/notification_item"></androidx.recyclerview.widget.RecyclerView>
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:text="게시글"
+            android:textColor="@color/purple_200"
+            android:textSize="15dp"
+            android:textStyle="bold"></TextView>
+
+        <TextView
+            android:id="@+id/Timepeed_TV_Friends"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:text="친구 추가"
+            android:textColor="@color/black"
+            android:textSize="15dp"
+            android:textStyle="bold"></TextView>
+    </LinearLayout>
+
+    <FrameLayout
+        android:id="@+id/Time_Peed_Activity_FrameLayout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/Time_peed_ViewPager2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clipChildren="false"
+            android:clipToPadding="false"></androidx.viewpager2.widget.ViewPager2>
+    </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
