--- a/app/src/main/res/layout/activity_user_profile_view.xml
+++ b/app/src/main/res/layout/activity_user_profile_view.xml
@@ -45,11 +45,12 @@
         <LinearLayout
             android:orientation="vertical"
             android:paddingBottom="5dp"
-            android:layout_weight="4"
+            android:layout_weight="3"
             android:layout_width="match_parent"
             android:layout_height="0dp">
             <RelativeLayout
-                android:layout_margin="5dp"
+                android:layout_marginLeft="3dp"
+                android:layout_marginRight="3dp"
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -65,7 +66,7 @@
                 <LinearLayout
                     android:id="@+id/Setting_Fragment_User_Profile_Container"
                     android:orientation="vertical"
-                    android:padding="5dp"
+                    android:padding="3dp"
                     android:layout_toRightOf="@+id/Setting_Fragment_My_Profile_Img_Civ"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
@@ -97,12 +98,12 @@
 
                 <ImageView
                     android:id="@+id/Setting_Fragment_Chatting_Civ"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentRight="true"
                     android:layout_marginRight="5dp"
-                    android:background="@drawable/ic_baseline_chat_bubble_outline_24"
+                    android:background="@drawable/ic_baseline_question_answer_24"
                     android:backgroundTint="@color/black">
                 </ImageView>
                 <TextView
@@ -112,7 +113,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="1:1 채팅"
-                    android:textSize="10dp"
+                    android:textSize="8dp"
                     android:layout_marginTop="3dp"
                     android:layout_marginRight="5dp"
                     android:textColor="@color/black">
@@ -120,7 +121,6 @@
             </RelativeLayout>
         </LinearLayout>
         <RelativeLayout
-            android:layout_marginTop="5dp"
             android:layout_weight="25"
             android:layout_width="match_parent"
             android:layout_height="0dp">
